--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.13.0",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.7",
