--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.21.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.6",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
