--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "@mui/x-date-pickers": "^7.20.0",
+    "@mui/x-date-pickers-pro": "^7.20.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.59.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +18,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
