--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "js-cookie": "^2.2.1",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
