--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13",
     "sweet-alert": "^2.0.5",
+    "tw-elements-react": "^1.0.0-alpha-end",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
