--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@emotion/styled": "^11.13.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.2",
