--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/x-date-pickers": "^7.20.0",
     "@mui/x-date-pickers-pro": "^7.20.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.9.0",
     "@tanstack/react-query": "^5.59.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
